# chaosNLP

./: .gitignore  README.md  download_data.sh  setup.cfg
NLP_starter/seq2seq/: bert.py  transformer.py
NLP_starter/transformers/: bert.py  gpt1.py  transformer.py
NLP_starter/utils/: normalization.py
chaosNLP/data/: __init__.py  _data_set.py  _vocabulary_mapper.py
chaosNLP/generative/: autoencoder.py
chaosNLP/knownledge_graph/relation_extraction/: snowball.py
chaosNLP/preprocessing/: text.py
chaosNLP/representation/: __init__.py  _bag_of_word.py  _tf_idf.py
chaosNLP/seq2seq/: nmt.config  nmt.py
chaosNLP/transformers/: gpt1.py  gpt2.py  transformer.py
chaosNLP/utils/clustering/: __init__.py  _single_pass_cluster.py
examples/: bert.py  gpt1.py  gpt2.py
seq2seq/: nmt.py  seq2seq.starter.py  transformer.py
tests/: test_bag_of_word.py  test_clustering.py  test_snowball.py  test_textReader.py  test_tfidf.py  test_tokenizer.py  test_vocabulary_mapper.py
tests/data/: snowball_labeled_data.txt
word2vec/: word2vec.py
