[metadata]
name = chaosNLP
version = 0.0.1
author = huangchao
author_email = huangchao.cpp@gmail.com
description = 容易理解的NLP库
long_description = file: README.md
long_description_content_type = text/markdown
keywords= NLP
license = MIT License

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =


[options.packages.find]
exclude =
    examples*
    tools*
    docs*
